--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Redis Server in GitHub Actions
-      uses: supercharge/redis-github-action@1.4.0
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.17
+        go-version: 1.19.x
 
     - name: Test
       run: go test -v ./...
