--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,17 +3,22 @@ name: Testing
 on: [push, pull_request]
 
 jobs:
-
-  tests:
+  build:
     runs-on: ubuntu-latest
-
+    services:
+      etcd:
+        image: gcr.io/etcd-development/etcd:v3.5.0
+        ports:
+          - 2379:2379
+        env:
+          ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
+          ETCD_ADVERTISE_CLIENT_URLS: http://0.0.0.0:2379
+  tests:
     steps:
     - uses: actions/checkout@v3
-    
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.19.x
-
     - name: Test
       run: go test -v ./...
