--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,10 @@ jobs:
   build:
     strategy:
       matrix:
-        go: [1.19]
-    runs-on: ubuntu-latest
+        go: [1.18.x, 1.19.x, 1.20.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     name: build
+    runs-on: ${{ matrix.os }}
     services:
       etcd:
         image: gcr.io/etcd-development/etcd:v3.5.0
