--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
         go: [1.18.x, 1.19.x, 1.20.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     name: build
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest #目前只支持ubuntu，因为镜像问题
     services:
       etcd:
         image: gcr.io/etcd-development/etcd:v3.5.0
