--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
           go-version: ${{ matrix.go }}
           cache-dependency-path: go.sum
       - name: Test
-        run: go test -v ./...
+        run: go mod tidy&&go test -v ./...
