--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,13 @@ jobs:
   build:
     strategy:
       matrix:
-        go: [1.20.x,1.21.x,1.22.x]
-        # os: [ubuntu-latest, macos-latest, windows-latest]
+        go: [1.20.x,1.21.x,1.22.x,1.23.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     name: build
-    runs-on: ubuntu-latest #目前只支持ubuntu，因为镜像问题
+    runs-on: ${{ matrix.os }}#ubuntu-latest #目前只支持ubuntu，因为镜像问题
     services:
       etcd:
-        image: gcr.io/etcd-development/etcd:v3.5.0
+        image: rapidfort/etcd
         ports:
           - 2379:2379
         env:
