--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,9 @@ jobs:
     strategy:
       matrix:
         go: [1.21.x,1.22.x,1.23.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+       # os: [ubuntu-latest, macos-latest, windows-latest]
     name: build
-    runs-on: ${{ matrix.os }}#ubuntu-latest #目前只支持ubuntu，因为镜像问题
+    runs-on: ubuntu-latest #目前只支持ubuntu，因为镜像问题
     services:
       etcd:
         image: rapidfort/etcd
