--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest #目前只支持ubuntu，因为镜像问题
     services:
       etcd:
-        image: rapidfort/etcd
+        image: gcr.io/etcd-development/etcd:v3.5.15
         ports:
           - 2379:2379
         env:
